# xrt

./: .gitignore  AGENTS.md  DOCUMENTATION_SPEC.md  QUICK_START.txt  README.en.md  README.md  RECOVERY_GUIDE.md  XRT_GLOBAL_TODO.md  all_functions.txt  build.sh  build_CLANG_DLL_x64.bat  build_CLANG_TEST_x64.bat  build_GCC_CLEAN_TEST_x64.bat  build_GCC_DLL_x64.bat  build_GCC_DLL_x64_local.bat  build_GCC_DLL_x64_release.bat  build_GCC_DLL_x86.bat  build_GCC_QUEUE_REGRESSION_linux.sh  build_GCC_QUEUE_REGRESSION_x64.bat  build_GCC_SIZE_GUARD_x64.bat  build_GCC_TEST_COROUTINE_STAGE_x64.bat  build_GCC_TEST_COROUTINE_x64.bat  build_GCC_TEST_HTTP_UTIL_FUZZ_CORPUS_x64.bat  build_GCC_TEST_HTTP_UTIL_FUZZ_x64.bat  build_GCC_TEST_LEGACY_x64.bat  build_GCC_TEST_MODERN_x64.bat  build_GCC_TEST_XNET2_STAGE_x64.bat  build_GCC_TEST_XNET_NATIVE_CORE_x64.bat  build_GCC_TEST_x64.bat  build_GCC_TEST_x86.bat  build_TCC_DLL_x64.bat  build_TCC_DLL_x64_local.bat  build_TCC_DLL_x64_release.bat  build_TCC_DLL_x86.bat  build_TCC_OBJ_x64.bat  build_TCC_OBJ_x86.bat  build_TCC_TEST_x64.bat  build_TCC_TEST_x86.bat  build_VC_DLL_x64.bat  build_VC_ENV_x64.bat  (+25 more)
dev/: ARCHIVE_api-nethttp.en.md  ARCHIVE_api-nethttp.md  ARCHIVE_api-netpoll.en.md  ARCHIVE_api-nettcp.md  FUZZ_HTTP_UTIL.md  MODULE_ASSESSMENT.md  QUEUE_REGRESSION.md  RWLOCK_README.md  TCC_COROUTINE_SPEC_20260326.md  XNET_V2_SPEC.md  XQUEUE_DESIGN_DRAFT.md  XRT_API_FREEZE_PLAN.md  XRT_COROUTINE_REFACTOR_PROGRESS_20260314.md  XRT_COROUTINE_REFACTOR_SPEC.md  (+50 more)
dev/regex/tools/fuzzington/: Cargo.toml  build.rs
dev/regex/tools/fuzzington/src/: main.rs
(+1308 files in other folders)
